[gd_scene load_steps=9 format=2]

[ext_resource path="res://entities/Ball/Ball.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Field/Field.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/Racket/Racket.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Game.gd" type="Script" id=4]
[ext_resource path="res://entities/Racket/PlayerInputComponent.gd" type="Script" id=5]
[ext_resource path="res://entities/Racket/AIInputComponent.gd" type="Script" id=6]
[ext_resource path="res://menus/HUD/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://menus/FinalScreen/FinalScreen.tscn" type="PackedScene" id=8]

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="Field" parent="." instance=ExtResource( 2 )]

[node name="Racket" parent="." instance=ExtResource( 3 )]
position = Vector2( 50, 256 )

[node name="PlayerInputComponent" type="Node" parent="Racket"]
script = ExtResource( 5 )

[node name="Racket2" parent="." instance=ExtResource( 3 )]
position = Vector2( 974, 256 )

[node name="AIInputComponent" type="Node" parent="Racket2"]
script = ExtResource( 6 )
ball_path = NodePath("../../Ball")

[node name="Ball" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 256 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="HUD" parent="." instance=ExtResource( 7 )]
margin_top = -0.857391
margin_bottom = 511.143

[node name="FinalScreen" parent="." instance=ExtResource( 8 )]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
[connection signal="goalLeft" from="Field" to="." method="_on_Field_goalLeft"]
[connection signal="goalRight" from="Field" to="." method="_on_Field_goalRight"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="gui_down_pressed" from="HUD" to="Racket/PlayerInputComponent" method="_on_HUD_gui_down_pressed"]
[connection signal="gui_down_released" from="HUD" to="Racket/PlayerInputComponent" method="_on_HUD_gui_down_released"]
[connection signal="gui_up_pressed" from="HUD" to="Racket/PlayerInputComponent" method="_on_HUD_gui_up_pressed"]
[connection signal="gui_up_released" from="HUD" to="Racket/PlayerInputComponent" method="_on_HUD_gui_up_released"]
[connection signal="exit" from="FinalScreen" to="." method="_on_FinalScreen_exit"]
[connection signal="new_round" from="FinalScreen" to="." method="_on_FinalScreen_new_round"]
